force-app/main/default/objects/WorkTypeGroup/fields/OM_IsFrequent__c.field-meta.xml
<CustomField>
    <fullName>OM_IsFrequent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Es frecuente</label>
    <type>Checkbox</type>
</CustomField>