force-app/main/default/objects/WorkTypeGroup/fields/OM_isOther__c.field-meta.xml
<CustomField>
    <fullName>OM_isOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Otro producto</label>
    <type>Checkbox</type>
</CustomField>