force-app/main/default/objects/WorkTypeGroup/fields/OM_Product__c.field-meta.xml
<CustomField>
    <fullName>OM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Work Type Groups</relationshipLabel>
    <relationshipName>Work_Type_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>